# routes/orders.js
@@ -5,10 +5,14 @@ const validate = require('../middleware/validate');
 const validateExistence = require('../middleware/existenceValidate');
 const schemas = require('../middleware/validator'); // Joi schemas
 
-router.get('/', ordersController.getAll);
-router.get('/:id', ordersController.getSingle);
-router.post('/', validate(schemas.order), validateExistence({ shirtId: 'shirts' }), ordersController.createOrder);
-router.put('/:id', validate(schemas.order), validateExistence({ shirtId: 'shirts' }), ordersController.updateOrder);
-router.delete('/:id', ordersController.deleteOrder);
+router.get('/', /* #swagger.tags = ['Orders'] */ ordersController.getAll);
+
+router.get('/:id', /* #swagger.tags = ['Orders'] */ ordersController.getSingle);
+
+router.post('/', validate(schemas.order), validateExistence({ shirtId: 'shirts' }), /* #swagger.tags = ['Orders'] */ ordersController.createOrder);
+
+router.put('/:id', validate(schemas.order), validateExistence({ shirtId: 'shirts' }), /* #swagger.tags = ['Orders'] */ ordersController.updateOrder);
+
+router.delete('/:id', /* #swagger.tags = ['Orders'] */ ordersController.deleteOrder);
 
 module.exports = router;
